--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Аптека.онлайн</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="./js/modal.js" defer></script>
 </head>
 
 <body>
@@ -19,8 +18,11 @@
                 <div class="header-one-text">
                     <p class="text1">Москва и область</p>
                     <div class="text2">
-                        <p>Служебные страницы</p>
+                         <a href="#" class="modal-btn">Служебные страницы</a>
                         <div class="header-list">
+                            <div class="border">
+                                
+                            </div>
                             <div class="header-list-block container">
                                 <div class="list1">
                                     <h3 class="h3-header-menu">Интернет-заказ</h3>
@@ -78,7 +80,9 @@
                                     <p class="p-card"><span class="span-card">&#8226;</span>Акции</p>
                                 </div>
                                 <!-- /.list6-->
-
+                                <div class="close">
+                                    <a href="#" class="close-btn"></a>
+                                </div>
                             </div>
                             <!-- header-list-block -->
                         </div>
